[package]
name = "rate_swaps"
version = "0.1.0"
edition = "2018"
autobins = false
autoexamples = false


[dependencies]
cosmwasm-std = {version = "1.0.0", features = ["stargate"]}
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw20 = "1.0.0"
cw-controllers = "1.0.0"
cw20-base = { version = "1.0.0" }
osmo-bindings = "0.5.1"
osmosis-std = "0.15.2"
prost = "0.10.4"
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cw-multi-test = "0.13.2"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/fyUSDC.rs"

[features]
default = ["library"]
library = []
